--- a/apps/annotation/CMakeLists.txt
+++ b/apps/annotation/CMakeLists.txt
@@ -1,19 +1,21 @@
-SET(deps opencv_core opencv_highgui opencv_imgproc opencv_imgcodecs opencv_videoio)
-ocv_check_dependencies(${deps})
+SET(OPENCV_ANNOTATION_DEPS opencv_core opencv_highgui opencv_imgproc opencv_imgcodecs opencv_videoio)
+ocv_check_dependencies(${OPENCV_ANNOTATION_DEPS})
 
 if(NOT OCV_DEPENDENCIES_FOUND)
    return()
 endif()
 
 project(annotation)
-
-ocv_include_directories("${CMAKE_CURRENT_SOURCE_DIR}" "${OpenCV_SOURCE_DIR}/include/opencv")
-ocv_include_modules(${deps})
-
 set(the_target opencv_annotation)
 
-add_executable(${the_target} opencv_annotation.cpp)
-target_link_libraries(${the_target} ${deps})
+ocv_target_include_directories(${the_target} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}" "${OpenCV_SOURCE_DIR}/include/opencv")
+ocv_target_include_modules(${the_target} ${OPENCV_ANNOTATION_DEPS})
+
+file(GLOB SRCS *.cpp)
+
+set(annotation_files ${SRCS})
+ocv_add_executable(${the_target} ${annotation_files})
+ocv_target_link_libraries(${the_target} ${OPENCV_ANNOTATION_DEPS})
 
 set_target_properties(${the_target} PROPERTIES
                       DEBUG_POSTFIX "${OPENCV_DEBUG_POSTFIX}"
