Use imported targets for linking to CUDA
This retains the desirable quality of not including paths to CUDA libraries
from the build system into the config files, and has two major advantages:

* It removes the need to use link_directories, which doesn't guarantee that
  the libraries from the supplied directory will be used (there may be
  libraries with the same names earlier in the search path).

* It removes the need to put -L entries into OPENCV_LINKER_LIBS. This variable
  is used with target_link_libraries, where such entries are treated as linker
  flags, so doing this is unportable. I remove the support for -L entries
  from OpenCVGenPkgconfig.cmake, as well, to discourage adding them in the
  future.

--- a/cmake/templates/OpenCVConfig.cmake.in
+++ b/cmake/templates/OpenCVConfig.cmake.in
@@ -236,7 +236,7 @@ foreach(__opttype OPT DBG)
   SET(OpenCV_EXTRA_LIBS_${__opttype} "")
 endforeach()
 
-# CUDA
+# Configure CUDA targets
 if(OpenCV_CUDA_VERSION)
   if(NOT CUDA_FOUND)
     find_host_package(CUDA ${OpenCV_CUDA_VERSION} EXACT REQUIRED)
@@ -273,16 +273,15 @@ if(OpenCV_CUDA_VERSION)
     list(APPEND OpenCV_CUDA_LIBS_ABSPATH ${CUDA_nvcuvenc_LIBRARIES})
   endif()
 
-  set(OpenCV_CUDA_LIBS_RELPATH "")
   foreach(l ${OpenCV_CUDA_LIBS_ABSPATH})
-    get_filename_component(_tmp ${l} PATH)
-    list(APPEND OpenCV_CUDA_LIBS_RELPATH ${_tmp})
+    get_filename_component(_tmp "${l}" NAME_WE)
+    string(REGEX REPLACE "^lib" "" _tmp "${_tmp}")
+    if(NOT TARGET "opencv_dep_${_tmp}") # protect against repeated inclusions
+      add_library("opencv_dep_${_tmp}" UNKNOWN IMPORTED)
+      set_target_properties("opencv_dep_${_tmp}" PROPERTIES IMPORTED_LOCATION "${l}")
+    endif()
   endforeach()
-
-  list(REMOVE_DUPLICATES OpenCV_CUDA_LIBS_RELPATH)
-  link_directories(${OpenCV_CUDA_LIBS_RELPATH})
 endif()
-
 
 # ==============================================================
 #  Android camera helper macro
