--- a/cmake/templates/OpenCV.mk.in
+++ b/cmake/templates/OpenCV.mk.in
@@ -104,7 +104,7 @@ endef
 define add_cuda_module
     include $(CLEAR_VARS)
     LOCAL_MODULE:=$1
-    LOCAL_SRC_FILES:=$(CUDA_TOOLKIT_DIR)/targets/armv7-linux-androideabi/lib/lib$1.so
+    LOCAL_SRC_FILES:=$(CUDA_TOOLKIT_DIR)/targets/armv7-linux-androideabi/lib/lib$(1:opencv_dep_%=%).so
     include $(PREBUILT_SHARED_LIBRARY)
 endef
 
@@ -202,7 +202,8 @@ ifeq ($(OPENCV_USE_GPU_MODULE),on)
     ifeq ($(INSTALL_CUDA_LIBRARIES),on)
         LOCAL_SHARED_LIBRARIES += $(foreach mod, $(CUDA_RUNTIME_LIBS), $(mod))
     else
-        LOCAL_LDLIBS += -L$(CUDA_TOOLKIT_DIR)/targets/armv7-linux-androideabi/lib $(foreach lib, $(CUDA_RUNTIME_LIBS), -l$(lib))
+        LOCAL_LDLIBS += -L$(CUDA_TOOLKIT_DIR)/targets/armv7-linux-androideabi/lib \
+            $(foreach lib, $(CUDA_RUNTIME_LIBS), -l$(lib:opencv_dep_%=%))
     endif
     LOCAL_STATIC_LIBRARIES+=libopencv_gpu
 endif
