--- a/3rdparty/gdcm/Source/MessageExchangeDefinition/CMakeLists.txt
+++ b/3rdparty/gdcm/Source/MessageExchangeDefinition/CMakeLists.txt
@@ -95,6 +95,10 @@ if(ENABLE_SOLUTION_FOLDERS)
   set_target_properties(gdcmMEXD PROPERTIES FOLDER "3rdparty")
 endif()
 
+if(NOT BUILD_SHARED_LIBS)
+  ocv_install_target(gdcmMEXD EXPORT OpenCVModules ARCHIVE DESTINATION ${OPENCV_3P_LIB_INSTALL_PATH} COMPONENT dev)
+endif()
+
 # libs
 install_library(gdcmMEXD)
 # PDB
