--- a/3rdparty/gdcm/Utilities/gdcmexpat/lib/CMakeLists.txt
+++ b/3rdparty/gdcm/Utilities/gdcmexpat/lib/CMakeLists.txt
@@ -12,6 +12,10 @@ if(ENABLE_SOLUTION_FOLDERS)
   set_target_properties(${EXPAT_LIBRARY_NAME} PROPERTIES FOLDER "3rdparty")
 endif()
 
+if(NOT BUILD_SHARED_LIBS)
+  ocv_install_target(${EXPAT_LIBRARY_NAME} EXPORT OpenCVModules ARCHIVE DESTINATION ${OPENCV_3P_LIB_INSTALL_PATH} COMPONENT dev)
+endif()
+
 if(NOT EXPAT_INSTALL_NO_LIBRARIES)
   install(TARGETS ${EXPAT_LIBRARY_NAME}
     EXPORT ${GDCM_TARGETS_NAME}
