--- a/3rdparty/gdcm/Utilities/gdcmjpeg/12/CMakeLists.txt
+++ b/3rdparty/gdcm/Utilities/gdcmjpeg/12/CMakeLists.txt
@@ -10,6 +10,10 @@ if(ENABLE_SOLUTION_FOLDERS)
   set_target_properties(${JPEG_LIBRARY_NAME}12 PROPERTIES FOLDER "3rdparty")
 endif()
 
+if(NOT BUILD_SHARED_LIBS)
+  ocv_install_target(${JPEG_LIBRARY_NAME}12 EXPORT OpenCVModules ARCHIVE DESTINATION ${OPENCV_3P_LIB_INSTALL_PATH} COMPONENT dev)
+endif()
+
 if(NOT JPEG_INSTALL_NO_LIBRARIES)
   install(TARGETS ${JPEG_LIBRARY_NAME}12
     EXPORT ${GDCM_TARGETS_NAME}
