--- a/3rdparty/gdcm/Utilities/gdcmopenjpeg-v1/libopenjpeg/CMakeLists.txt
+++ b/3rdparty/gdcm/Utilities/gdcmopenjpeg-v1/libopenjpeg/CMakeLists.txt
@@ -40,6 +40,10 @@ if(ENABLE_SOLUTION_FOLDERS)
   set_target_properties(${OPENJPEG_LIBRARY_NAME} PROPERTIES FOLDER "3rdparty")
 endif()
 
+if(NOT BUILD_SHARED_LIBS)
+  ocv_install_target(${OPENJPEG_LIBRARY_NAME} EXPORT OpenCVModules ARCHIVE DESTINATION ${OPENCV_3P_LIB_INSTALL_PATH} COMPONENT dev)
+endif()
+
 # Install library
 if(NOT OPENJPEG_INSTALL_NO_LIBRARIES)
   install(TARGETS ${OPENJPEG_LIBRARY_NAME}
