--- a/3rdparty/gdcm/Source/DataDictionary/CMakeLists.txt
+++ b/3rdparty/gdcm/Source/DataDictionary/CMakeLists.txt
@@ -103,6 +103,10 @@ if(ENABLE_SOLUTION_FOLDERS)
   set_target_properties(gdcmDICT PROPERTIES FOLDER "3rdparty")
 endif()
 
+if(NOT BUILD_SHARED_LIBS)
+  ocv_install_target(gdcmDICT EXPORT OpenCVModules ARCHIVE DESTINATION ${OPENCV_3P_LIB_INSTALL_PATH} COMPONENT dev)
+endif()
+
 # libs
 install_library(gdcmDICT)
 # PDB
