--- a/3rdparty/gdcm/Source/InformationObjectDefinition/CMakeLists.txt
+++ b/3rdparty/gdcm/Source/InformationObjectDefinition/CMakeLists.txt
@@ -52,6 +52,10 @@ if(ENABLE_SOLUTION_FOLDERS)
   set_target_properties(gdcmIOD PROPERTIES FOLDER "3rdparty")
 endif()
 
+if(NOT BUILD_SHARED_LIBS)
+  ocv_install_target(gdcmIOD EXPORT OpenCVModules ARCHIVE DESTINATION ${OPENCV_3P_LIB_INSTALL_PATH} COMPONENT dev)
+endif()
+
 # libs
 install_library(gdcmIOD)
 # PDB
