--- a/3rdparty/gdcm/Utilities/socketxx/socket++/CMakeLists.txt
+++ b/3rdparty/gdcm/Utilities/socketxx/socket++/CMakeLists.txt
@@ -80,6 +80,10 @@ if(ENABLE_SOLUTION_FOLDERS)
   set_target_properties(${SOCKETXX_LIBRARY_NAME} PROPERTIES FOLDER "3rdparty")
 endif()
 
+if(NOT BUILD_SHARED_LIBS)
+  ocv_install_target(${SOCKETXX_LIBRARY_NAME} EXPORT OpenCVModules ARCHIVE DESTINATION ${OPENCV_3P_LIB_INSTALL_PATH} COMPONENT dev)
+endif()
+
 # Install library
 if(NOT SOCKETXX_INSTALL_NO_LIBRARIES)
   # Runtime
