--- a/cmake/templates/opencv_abi.xml.in
+++ b/cmake/templates/opencv_abi.xml.in
@@ -21,6 +21,8 @@
 </libs>
 
 <skip_headers>
+    opencv2/hal/intrin_neon.hpp
+    opencv2/hal/intrin_sse.hpp
     opencv2/core/cuda*
     opencv2/core/private*
     opencv/cxeigen.hpp
