--- a/3rdparty/gdcm/Utilities/CMakeLists.txt
+++ b/3rdparty/gdcm/Utilities/CMakeLists.txt
@@ -133,13 +133,13 @@ APPEND_COPYRIGHT(${CMAKE_CURRENT_SOURCE_DIR}/wxWidgets/Copyright.txt)
   subdirs(KWStyle)
 #endif()
 
-if(NOT GDCM_USE_SYSTEM_SOCKETXX)
+if(GDCM_USE_MEXD_MODULE AND NOT GDCM_USE_SYSTEM_SOCKETXX)
 #set(SOCKETXX_NAMESPACE "GDCMSOCKETXX")
   set(SOCKETXX_INSTALL_NO_LIBRARIES ${GDCM_INSTALL_NO_LIBRARIES})
   set(SOCKETXX_INSTALL_BIN_DIR      ${GDCM_INSTALL_BIN_DIR})
   set(SOCKETXX_INSTALL_LIB_DIR      ${GDCM_INSTALL_LIB_DIR})
   set(SOCKETXX_INSTALL_INCLUDE_DIR  ${GDCM_INSTALL_INCLUDE_DIR}/socketxx)
-  #subdirs(socketxx)
+  subdirs(socketxx)
 endif()
 
 add_subdirectory(gdcmrle)
