Grassroots DiCoM i.e. GDCM based DICOM image reader is added.

--- a/3rdparty/gdcm/CMakeLists.txt
+++ b/3rdparty/gdcm/CMakeLists.txt
@@ -100,6 +100,10 @@ else()
   set(GDCM_BUILD_TESTING_DEFAULT ON)
 endif()
 
+if(UNIX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+endif()
+
 #-----------------------------------------------------------------------------
 # Disable deprecation warnings for standard C and STL functions in VS2005
 # and later
