--- a/3rdparty/gdcm/Utilities/gdcmjpeg/CMakeLists.txt
+++ b/3rdparty/gdcm/Utilities/gdcmjpeg/CMakeLists.txt
@@ -29,6 +29,7 @@ set(JPEG_LIBRARY_PROPERTIES ${JPEG_LIBRARY_PROPERTIES}
 
 if(UNIX)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 endif()
 
 # memmgr back ends: compile only one of these into a working library
