--- a/3rdparty/gdcm/Utilities/gdcmzlib/CMakeLists.txt
+++ b/3rdparty/gdcm/Utilities/gdcmzlib/CMakeLists.txt
@@ -47,6 +47,7 @@ endif()
 
 if(UNIX)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 endif()
 
   configure_file(
