Change in opencv/samples/cpp/CMakeLists.txt to create a  constant which gives data folders for samples. This constant is defined in opencv/samples/OpenCVsamples_cpp.h This files must be included in each files needed data. I have test it with four samples dft edge houghcircles and shape_example

--- a/samples/cpp/CMakeLists.txt
+++ b/samples/cpp/CMakeLists.txt
@@ -2,6 +2,10 @@
 #  CMake file for C samples. See root CMakeLists.txt
 #
 # ----------------------------------------------------------------------------
+configure_file (
+	"${PROJECT_SOURCE_DIR}/samples/cpp/OpenCVsamples_cpp.h.in"
+	"${PROJECT_SOURCE_DIR}/samples/OpenCVsamples_cpp.h"
+	)
 
 SET(OPENCV_CPP_SAMPLES_REQUIRED_DEPS opencv_core opencv_imgproc opencv_flann
     opencv_imgcodecs opencv_videoio opencv_highgui opencv_ml opencv_video
