--- a/cmake/templates/opencv_run_all_tests_unix.sh.in
+++ b/cmake/templates/opencv_run_all_tests_unix.sh.in
@@ -55,6 +55,15 @@ OPENCV_TEST_PATH=@CMAKE_INSTALL_PREFIX@/@OPENCV_TEST_INSTALL_PATH@
 OPENCV_PYTHON_TESTS=@OPENCV_PYTHON_TESTS_LIST@
 export OPENCV_TEST_DATA_PATH=@CMAKE_INSTALL_PREFIX@/share/OpenCV/testdata
 
+CUR_DIR=`pwd`
+if [ -d "$CUR_DIR" -a -w "$CUR_DIR" ]; then
+    echo "${TEXT_CYAN}CUR_DIR : $CUR_DIR${TEXT_RESET}"
+else
+    echo "${TEXT_RED}Error: Do not have permissions to write to $CUR_DIR${TEXT_RESET}"
+    echo "${TEXT_RED}Please run the script from directory with write access${TEXT_RESET}"
+    exit 1
+fi
+
 # Run tests
 
 SUMMARY_STATUS=0
