--- a/modules/java/jni/CMakeLists.txt
+++ b/modules/java/jni/CMakeLists.txt
@@ -82,6 +82,13 @@ endif()
 
 set(__install_export "")
 if(BUILD_FAT_JAVA_LIB)
+  # libopencv_java.so is used during native Android builds (without opencv_core)
+  if(DISABLE_TYPE_SAFE_API)
+    ocv_target_compile_definitions(${the_module} PUBLIC CV_DISABLE_TYPE_SAFE_API=1)
+  elseif(DISABLE_TYPE_COMPATIBLE_API)
+    ocv_target_compile_definitions(${the_module} PUBLIC CV_DISABLE_TYPE_COMPATIBLE_API=1)
+  endif()
+
   set(__install_export EXPORT OpenCVModules)
 endif()
 
