--- a/modules/highgui/CMakeLists.txt
+++ b/modules/highgui/CMakeLists.txt
@@ -34,11 +34,12 @@ set(highgui_srcs
     )
 
 ocv_file_glob(highgui_ext_hdrs
-     "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/*.hpp"
-     "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${name}/*.hpp"
-     "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${name}/*.h")
+     "${CMAKE_CURRENT_LIST_DIR}/include/opencv*/*.hpp"
+     "${CMAKE_CURRENT_LIST_DIR}/include/opencv*/${name}/*.hpp"
+     "${CMAKE_CURRENT_LIST_DIR}/include/opencv*/${name}/*.h")
 
 # Removing WinRT API headers by default
+list(REMOVE_ITEM highgui_ext_hdrs "${CMAKE_CURRENT_LIST_DIR}/include/opencv/${name}/highgui_winrt.hpp")
 list(REMOVE_ITEM highgui_ext_hdrs "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${name}/highgui_winrt.hpp")
 
 if(HAVE_QT5)
