--- a/modules/videoio/CMakeLists.txt
+++ b/modules/videoio/CMakeLists.txt
@@ -29,7 +29,7 @@ set(videoio_srcs
     ${CMAKE_CURRENT_LIST_DIR}/src/container_avi.cpp
     )
 
-file(GLOB videoio_ext_hdrs
+ocv_file_glob(videoio_ext_hdrs
     "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/*.hpp"
     "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${name}/*.hpp"
     "${CMAKE_CURRENT_LIST_DIR}/include/opencv2/${name}/*.h")
