Refactor core module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -315,6 +315,8 @@ OCV_OPTION(INSTALL_TESTS            "Install accuracy and performance test binar
 
 # OpenCV build options
 # ===================================================
+OCV_OPTION(ENABLE_TYPE_SAFE_API       "Enable enum-based type-safe API? If disabled, int types will be utilized" ON)
+OCV_OPTION(ENABLE_COMPATIBLE_API      "Enable backwards compatibility with legacy API?"          ON IF ENABLE_TYPE_SAFE_API)
 OCV_OPTION(ENABLE_CCACHE              "Use ccache"                                               (UNIX AND NOT IOS AND (CMAKE_GENERATOR MATCHES "Makefile" OR CMAKE_GENERATOR MATCHES "Ninja")) )
 OCV_OPTION(ENABLE_PRECOMPILED_HEADERS "Use precompiled headers"                                  ON IF (MSVC OR (NOT IOS AND NOT CMAKE_CROSSCOMPILING) ) )
 OCV_OPTION(ENABLE_SOLUTION_FOLDERS    "Solution folder in Visual Studio or in other IDEs"        (MSVC_IDE OR CMAKE_GENERATOR MATCHES Xcode) )
@@ -342,6 +344,16 @@ OCV_OPTION(CV_TRACE                   "Enable OpenCV code trace" ON)
 
 OCV_OPTION(ENABLE_PYLINT              "Add target with Pylint checks"                            (BUILD_DOCS OR BUILD_EXAMPLES) IF (NOT CMAKE_CROSSCOMPILING AND NOT APPLE_FRAMEWORK) )
 OCV_OPTION(ENABLE_FLAKE8              "Add target with Python flake8 checker"                    (BUILD_DOCS OR BUILD_EXAMPLES) IF (NOT CMAKE_CROSSCOMPILING AND NOT APPLE_FRAMEWORK) )
+
+if(ENABLE_TYPE_SAFE_API)
+  add_definitions(-DCV_TYPE_SAFE_API)
+else()
+    set(ENABLE_COMPATIBLE_API OFF)
+endif()
+
+if(ENABLE_COMPATIBLE_API)
+  add_definitions(-DCV_COMPATIBLE_API)
+endif()
 
 if(ENABLE_IMPL_COLLECTION)
   add_definitions(-DCV_COLLECT_IMPL_DATA)
@@ -1020,6 +1032,9 @@ else()
 endif()
 status("    ccache:"                  OPENCV_COMPILER_IS_CCACHE THEN YES ELSE NO)
 status("    Precompiled headers:"     PCHSupport_FOUND AND ENABLE_PRECOMPILED_HEADERS THEN YES ELSE NO)
+status("    Type-safe API:"           ENABLE_TYPE_SAFE_API THEN "YES" ELSE "NO")
+status("    Compatible API:"          ENABLE_COMPATIBLE_API THEN "YES" ELSE "NO")
+
 
 # ========================== Dependencies ============================
 ocv_get_all_libs(deps_modules deps_extra deps_3rdparty)
